--- a/configs/dnsmasq.conf
+++ b/configs/dnsmasq.conf
@@ -1,4 +1,15 @@
 enable-tftp
 tftp-root=/vagrant/tftp
 
-address=/cnc.local/192.168.11.3
+# address=/cnc.local/{cnc_ip}
+
+# If you don't want dnsmasq to read /etc/hosts, uncomment the
+# following line.
+#no-hosts
+# or if you want it to read another file, as well as /etc/hosts, use
+# this.
+addn-hosts=/etc/dnsmasqhosts
+
+# Change this line if you want dns to get its upstream servers from
+# somewhere other that /etc/resolv.conf
+resolv-file=/etc/resolv.dnsmasq
